Till header section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,26 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Eupheme healthcare pvt ltd</title>
 </head>
+
 <body>
-    <nav class="navbar">
-        <ul class="navlist">
-            <div class="logo"> <img src="../eupheme/common/logo.png" alt=""></div>
-            <li> <a href="http://"> Home </a> </li>
-            <li><a href="http://"> Services </a> </li>
-            <li><a href="http://"> Contact </a></li>
-            <li><a href="http://"> About us </a></li>
-        </ul>
-    </nav>
+    <div class="header background">
+        <nav class="navbar">
+            <ul class="navlist">
+                <div class="logo"> <img src="../eupheme/common/logo.png" alt=""></div>
+                <li> <a href="http://"> Home </a> </li>
+                <li><a href="http://"> Services </a> </li>
+                <li><a href="http://"> Contact </a></li>
+                <li><a href="http://"> About us </a></li>
+            </ul>
+        </nav>
+
+
+        <section class="innerElement">
+            <div class="FirstElement HeaderContent">
+                <p><i>“Time and health are two precious assets that we don’t recognize and </p>
+                <p>appreciate until they have beendepleted.”</i> -  – Denis Waitley  </p>
+        </section>
+    </div>
 </body>
+
 </html>
