--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="header background">
         <nav class="navbar">
-            <div class="logo"> <img src="../eupheme/common/logo.png" alt=""></div>
+            <div class="logo"> <img src="../Eupheme/common/logo.png" alt=""></div>
             <ul class="navlist">
                 <li> <a class="menuItems"> Home </a> </li>
                 <li><a class="menuItems"> Services </a> </li>
