--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </section>
     <footer class="footer">
         <p>
-            © 2022 Auftritt Healthcare Pvt. Ltd. All Rights Reserved.
+            © 2022 Eupheme Healthcare Pvt. Ltd. All Rights Reserved.
         </p>
     </footer>
 </body>
