--- a/products.html
+++ b/products.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/product.css">
     <link rel="stylesheet" href="css/responsive.css">
     <title>Eupheme healthcare pvt ltd</title>
@@ -18,8 +19,8 @@
         <nav class="navbar">
             <div class="logo"> <img src="../Eupheme/common/logo.png" alt=""></div>
             <ul class="navlist">
-                <li> <a class="menuItems"> Home </a> </li>
-                <li><a class="menuItems"> Services </a> </li>
+                <li> <a class="menuItems" href="index.html"> Home </a> </li>
+                <li><a class="menuItems" href="products.html"> Products </a> </li>
                 <li><a class="menuItems"> Contact </a></li>
                 <li><a class="menuItems"> About us </a></li>
             </ul>
@@ -31,15 +32,133 @@
         </nav>
 
 
+
+        <section class="innerElement">
+            <div class="FirstElement HeaderContent">
+                <p>“Time and health are two precious assets that we don’t recognize and </p>
+                <p>appreciate until they have beendepleted.” - – Denis Waitley </p>
+        </section>
     </div>
     <section class="bodyPart">
-       <p>asdasdasd</p>
+        <div class="productContainer bodyContent">
+            
+
+            <div class="productItems" id="euphevita">
+                <p class="productTitle"> <b>EUPHEVITA</b></p>
+                <p class="productTagLine">Ginseng Powder, Vitamin A Palmitate, Vitamin B12,
+                    Vitamin B2, Vitamin C, Vitamin B6, Vitamin D3, Vitamin E,
+                    Nicotinamide, Calcium Pantothenate, Folic Acid, Ferrous
+                    Fumarate, Copper, Magnesium, Manganese, Zinc, Calcium,
+                    Phosphorus, lodine & Potassium
+                    Soft Gelatin Capsules</p>
+                <div class="prodictSubContainer productHeads">
+                    <img src="./common/EUPHEVITA-pr.jpeg" alt="EUPHEVITA" class="productItemImage">
+                    <span class="productDescription">
+                        <p class="productDescriptionHead">CAptly Restores Nutritional Needs</p>
+                        <span class="productBenifits">
+                            <ul>
+                                <li>Reduces nutritional deficiency, infection risk & aging process</li>
+                                <li>HStimulates appetite</li>
+                                <li>Increases the immune response especially in elderly people</li>
+                                <li>EActs as a cofactor for collagen & other wound protein synthesis</li>
+                                <li>EVitamin A. C and E. and Zinc and Selenium, exert</li>
+                                    beneficial effect on the immune system</li>
+                                <li>Copper & Zinc participate in collagen metabolism and
+                                    wound healing</li>
+                            </ul>
+                        </span>
+                    </span>
+                </div>
+            </div>
+
+
+            <div class="productItems" id="deflapheme">
+                <p class="productTitle"> <b>Deflapheme</b></p>
+                <p class="productTagLine">Deflazacort Tablets 6mg, Immunosuppressant &
+                    Anti-Inflammatory Corticosteroid
+                    A Leap Ahead From Others....</p>
+                <div class="prodictSubContainer productHeads">
+                    <img src="./common/Deflapheme_pr.jpeg" alt="deflapheme" class="productItemImage">
+                    <span class="productDescription">
+                        <p class="productDescriptionHead">Suppress Hyper-Immune Response &
+                            Uncontrolled Inflammation</p>
+                        <span class="productBenifits">
+                            <ul>
+                                <li>Negligible effect on bone mineral density</li>
+                                <li>No effect on blood glucose level, minimal weight gain</li>
+                                <li>Minimal HPA-axis suppression</li>
+                                <li>Minimal mineralocorticoid activity</li>
+                                <li>Maintains most of the anti-inflammatory effects of prednisone while</li>
+                                    appearing to have fewer adverse effects of the skeleton</li>
+                                <li>CDeflazacort beyond conventional cortivosteriods less diabetogenic
+                                    effects a dissociated corticosteroid.</li>
+                            </ul>
+                        </span>
+                    </span>
+                </div>
+            </div>
+
+
+            <div class="productItems" id="parapheme">
+                <p class="productTitle"> <b>Parapheme-A</b></p>
+                <p class="productTagLine">Aceclofenac 100mg & Paracetamol 325mg Tablets</p>
+                <div class="prodictSubContainer productHeads">
+                    <img src="./common/Parapheme_pr.jpeg" alt="parapheme" class="productItemImage">
+                    <span class="productDescription">
+                        <p class="productDescriptionHead">The Safe and Superior
+                            Analgesic to Relieve
+                            Painful Inflammatory
+                            Conditions</p>
+                        <span class="productBenifits">
+                            <ul>
+                                <li>Effective analgesic and anti-inflammatory agent</li>
+                                <li>Possesses high bioavailaility of 100%</li>
+                                <li>IStimulates cartilage matrix synthesis</li>
+                                <li>EExhibits superior Gl tolerability
+                                    compared to Diclofenac</li>
+                                <li>Relieves mild to moderate body pain</li>
+                                    <li>beneficial effect on the immune system</li>
+                                <li>Copper & Zinc participate in collagen metabolism and
+                                    wound healing</li>
+                            </ul>
+                        </span>
+                    </span>
+                </div>
+            </div>
+
+            <div class="productItems" id="euphepan">
+                <p class="productTitle"> <b>Euphepan</b></p>
+                <p class="productTagLine">TPantoprazole Sodium Tablets I.P 40mg</p>
+                <div class="prodictSubContainer productHeads">
+                    <img src="./common/euphepan_pr.jpeg" alt="Euphepan" class="productItemImage">
+                    <span class="productDescription">
+                        <p class="productDescriptionHead">Choose the right option for restoring
+                            uutritional deficiencies</p>
+                        <span class="productBenifits">
+                            <ul>
+                                <li>Reduces Acid Secretion Fast 100%</li>
+                                <li>Healing of G.l. Diseases</li>
+                                <li>RExcellent Clinical efficasy</li>
+                                <li>Excellent safety profile</li>
+                                <li>Least potential for drug interaction</li>
+                                <li>High healing rates/li>
+                            </ul>
+                        </span>
+                    </span>
+                </div>
+            </div>
+
+            <p class="descpalmner">
+                All products comply with WHO standard and manufactured by WHO approved plant 'M/s Sarthak Biotech Pvt. Ltd'
+            </p>
+
+        </div>
     </section>
-    <!-- <footer class="footer">
+    <footer class="footer">
         <p>
             © 2022 Eupheme Healthcare Pvt. Ltd. All Rights Reserved.
         </p>
-    </footer> -->
+    </footer>
 </body>
 <script>
     const list = document.querySelector(".navlist")
@@ -49,13 +168,13 @@
         list.classList.toggle('visible');
     });
 
-    const nodeList = document.querySelectorAll('.menuItems');
-    nodeList.forEach((items, index) => {
-        items.addEventListener('click', () => {
+    // const nodeList = document.querySelectorAll('.menuItems');
+    // nodeList.forEach((items, index) => {
+    //     items.addEventListener('click', () => {
 
-            alert("Please wait till site get ready")
-        });
-    });
+    //         alert("Please wait till site get ready")
+    //     });
+    // });
 </script>
 
 </html>
