--- a/products.html
+++ b/products.html
@@ -17,12 +17,12 @@
 <body>
     <div class="header background ">
         <nav class="navbar">
-            <div class="logo"> <img src="../Eupheme/common/logo.png" alt=""></div>
+            <div class="logo"> <a href="href="index.html""> <img src="../Eupheme/common/logo.png" alt=""></a></div>
             <ul class="navlist">
                 <li> <a class="menuItems" href="index.html"> Home </a> </li>
                 <li><a class="menuItems" href="products.html"> Products </a> </li>
-                <li><a class="menuItems"> Contact </a></li>
-                <li><a class="menuItems"> About us </a></li>
+                <li><a class="menuItems" href="contact.html"> Contact </a></li>
+              
             </ul>
             <div class="burgerMain">
                 <div class="burger"></div>
